[gd_scene load_steps=24 format=2]

[ext_resource path="res://Second Scene.png" type="Texture" id=1]
[ext_resource path="res://Pokemon-RBY-LavenderTown.png" type="Texture" id=2]
[ext_resource path="res://Personaje.tscn" type="PackedScene" id=3]
[ext_resource path="res://Mask Pokemon Lavender Town.png" type="Texture" id=4]
[ext_resource path="res://CanvasLayer.gd" type="Script" id=5]
[ext_resource path="res://X.png" type="Texture" id=6]
[ext_resource path="res://Fancy Frame.png" type="Texture" id=7]
[ext_resource path="res://Position2D.gd" type="Script" id=8]
[ext_resource path="res://The Elder One.gd" type="Script" id=9]
[ext_resource path="res://Animacion the elder one/1.png" type="Texture" id=10]
[ext_resource path="res://Animacion the elder one/2.png" type="Texture" id=11]
[ext_resource path="res://Animacion the elder one/3.png" type="Texture" id=12]
[ext_resource path="res://Animacion the elder one/4.png" type="Texture" id=13]
[ext_resource path="res://Animacion the elder one/5.png" type="Texture" id=14]
[ext_resource path="res://Animacion the elder one/6.png" type="Texture" id=15]
[ext_resource path="res://Animacion the elder one/7.png" type="Texture" id=16]
[ext_resource path="res://Sword 0.png" type="Texture" id=17]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 31.9368, 8.20724 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 0.206367, 15.894 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 19.8862, 12.8514 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 1, 1, 1, 1 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 34.3828, 44.6381 )

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ) ],
"loop": false,
"name": "La liberacion",
"speed": 4.0
} ]

[node name="Node2D" type="Node2D"]
__meta__ = {
"_edit_horizontal_guides_": [  ],
"_edit_vertical_guides_": [  ]
}

[node name="Second Scene" type="Sprite" parent="."]
position = Vector2( -95.1455, 144.069 )
texture = ExtResource( 1 )

[node name="Pokemon-RBY-LavenderTown" type="Sprite" parent="."]
position = Vector2( 177.616, 144.762 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="KinematicBody2D" parent="." instance=ExtResource( 3 )]
position = Vector2( 257.545, 131.324 )
input_pickable = true
collision_mask = 7

[node name="Mask Pokemon Lavender Town" type="Sprite" parent="."]
position = Vector2( 177.665, 144.843 )
texture = ExtResource( 4 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]
editor/display_folded = true
position = Vector2( 2, -1 )
collision_mask = 0
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="StaticBody2D"]
position = Vector2( -2, 1 )
polygon = PoolVector2Array( 1.70745, 0.681713, 129.519, 0.681713, 129.549, 32.6509, 33.727, 32.7012, 33.6315, 128.26, 2.0184, 128.588 )
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="StaticBody2D"]
position = Vector2( -2, 1 )
polygon = PoolVector2Array( 193.494, 0.746667, 193.527, 96.4875, 321.199, 96.9094, 321.294, 256.281, 208.508, 256.392, 192.856, 270.646, 193.318, 288.926, 353.69, 288.757, 353.617, 0.695639 )
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionPolygon2D3" type="CollisionPolygon2D" parent="StaticBody2D"]
position = Vector2( -2, 1 )
polygon = PoolVector2Array( 1.61363, 160.396, 18.7229, 160.36, 33.7183, 175.441, 33.9577, 256.257, 147.053, 256.219, 162.04, 271.313, 162.08, 288.673, 1.54343, 288.715 )
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionPolygon2D4" type="CollisionPolygon2D" parent="StaticBody2D"]
polygon = PoolVector2Array( 260.766, 224.357, 314.723, 224.653, 314.576, 173.652, 260.766, 173.652 )
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionPolygon2D8" type="CollisionPolygon2D" parent="StaticBody2D"]
position = Vector2( -192.365, -128.283 )
polygon = PoolVector2Array( 260.766, 224.357, 314.723, 224.653, 314.576, 173.652, 260.766, 173.652 )
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionPolygon2D5" type="CollisionPolygon2D" parent="StaticBody2D"]
polygon = PoolVector2Array( 122.94, 223.422, 122.844, 217.97, 123.896, 217.97, 123.879, 199.283, 112.735, 193.448, 78.4526, 193.457, 66.4988, 199.541, 66.675, 216.538, 68.3561, 218.901, 68.3561, 223.444, 69.7192, 224.716, 121.494, 225.028 )
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionPolygon2D6" type="CollisionPolygon2D" parent="StaticBody2D"]
position = Vector2( 64.2972, 0 )
polygon = PoolVector2Array( 122.94, 223.422, 122.844, 217.97, 123.896, 217.97, 123.879, 199.283, 112.735, 193.448, 78.4526, 193.457, 66.4988, 199.541, 66.675, 216.538, 68.3561, 218.901, 68.3561, 223.444, 69.7192, 224.716, 121.494, 225.028 )
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionPolygon2D7" type="CollisionPolygon2D" parent="StaticBody2D"]
position = Vector2( 64.0092, -63.0657 )
polygon = PoolVector2Array( 122.94, 223.422, 122.844, 217.97, 123.896, 217.97, 123.879, 199.283, 112.735, 193.448, 78.4526, 193.457, 66.4988, 199.541, 66.675, 216.538, 68.3561, 218.901, 68.3561, 223.444, 69.7192, 224.716, 121.494, 225.028 )
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 159.335, 9.93036 )
shape = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionPolygon2D9" type="CollisionPolygon2D" parent="StaticBody2D"]
polygon = PoolVector2Array( -1.67627, 129.396, -33.9932, 129.396, -33.7259, 33.6149, -160.507, 33.3008, -160.354, 256.723, -33.8001, 256.723, -34.2059, 176.336, -18.3786, 160.779, -1.4691, 160.779, -1.80031, 288.926, -192.855, 289.294, -192.487, 0.787912, -1.80031, 1.15596 )
__meta__ = {
"_edit_lock_": true
}

[node name="Area2D" type="Area2D" parent="."]
editor/display_folded = true
collision_layer = 2
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 2.14378, 144.517 )
shape = SubResource( 2 )

[node name="Jhonny" type="Area2D" parent="."]
editor/display_folded = true
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Jhonny"]
position = Vector2( 156.474, 114.218 )
shape = SubResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="HUD" type="CanvasLayer" parent="."]
editor/display_folded = true
script = ExtResource( 5 )

[node name="X" type="Sprite" parent="HUD"]
visible = false
position = Vector2( 143.114, 95.1111 )
texture = ExtResource( 6 )
offset = Vector2( -3.67838, -9.5 )

[node name="Respuesta" type="Label" parent="HUD"]
visible = false
margin_top = 192.0
margin_right = 352.0
margin_bottom = 289.0
custom_styles/normal = SubResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "

My Man!"
align = 1

[node name="Fancy Frame" type="Sprite" parent="HUD"]
visible = false
position = Vector2( 175.64, 239.97 )
scale = Vector2( 1.00477, 1 )
texture = ExtResource( 7 )

[node name="Position2D" type="Position2D" parent="."]
editor/display_folded = true
script = ExtResource( 8 )

[node name="Camera2D" type="Camera2D" parent="Position2D"]
position = Vector2( 178.361, 144.957 )
current = true
smoothing_enabled = true

[node name="The Elder One" type="Area2D" parent="."]
editor/display_folded = true
position = Vector2( -96.7245, 148.599 )
collision_layer = 4
collision_mask = 0
script = ExtResource( 9 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="The Elder One"]
position = Vector2( 11.2385, -0.681122 )
shape = SubResource( 5 )
__meta__ = {
"_edit_lock_": true
}

[node name="AnimatedSprite2" type="AnimatedSprite" parent="The Elder One"]
position = Vector2( 2.30959, -10.5753 )
frames = SubResource( 6 )
animation = "La liberacion"
[connection signal="Accion" from="KinematicBody2D" to="HUD" method="_on_KinematicBody2D_Accion"]
[connection signal="ElderAction" from="KinematicBody2D" to="The Elder One" method="_on_KinematicBody2D_ElderAction"]
[connection signal="Responder" from="KinematicBody2D" to="HUD" method="_on_KinematicBody2D_Responder"]
[connection signal="body_entered" from="Area2D" to="Position2D" method="_on_Area2D_body_entered"]
[connection signal="body_entered" from="Jhonny" to="KinematicBody2D" method="_on_Jhonny_body_entered"]
[connection signal="body_exited" from="Jhonny" to="HUD" method="_on_Jhonny_body_exited"]
[connection signal="CancelAccion" from="HUD" to="KinematicBody2D" method="_on_HUD_CancelAccion"]
[connection signal="body_entered" from="The Elder One" to="KinematicBody2D" method="_on_The_Elder_One_body_entered"]
[connection signal="body_exited" from="The Elder One" to="HUD" method="_on_The_Elder_One_body_exited"]
